--- a/index.html
+++ b/index.html
@@ -12,6 +12,49 @@
   <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
 
+<!-- Charset -->
+<meta charset="UTF-8">
+
+<!-- Responsividade -->
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Título -->
+<title>Kalwer - Criatividade que Conecta</title>
+
+<!-- Descrição -->
+<meta name="description" content="A Kalwer transforma ideias em impacto visual. Criamos artes para redes sociais, vídeos curtos, emotes, ilustrações e muito mais.">
+
+<!-- Palavras-chave -->
+<meta name="keywords" content="design, identidade visual, artes para redes sociais, vídeos curtos, emotes, ilustrações, reels, tiktok, banners, Kalwer, marketing digital">
+
+<!-- Autor -->
+<meta name="author" content="Kalwer">
+
+<!-- Robots -->
+<meta name="robots" content="index, follow">
+
+<!-- Favicon -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+
+<!-- Open Graph / Facebook / LinkedIn -->
+<meta property="og:type" content="website">
+<meta property="og:title" content="Kalwer - Criatividade que Conecta">
+<meta property="og:description" content="Criamos artes visuais, vídeos curtos e emotes que fortalecem sua marca no digital.">
+<meta property="og:image" content="https://github.com/Tiago22a/Kalwer/blob/main/Pagina.png?raw=true">
+<meta property="og:url" content="https://seusite.com">
+<meta property="og:site_name" content="Kalwer">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="Kalwer - Criatividade que Conecta">
+<meta name="twitter:description" content="Design impactante, vídeos curtos, emotes e mais para marcas digitais.">
+<meta name="twitter:image" content="https://github.com/Tiago22a/Kalwer/blob/main/Pagina.png?raw=true">
+<meta name="twitter:site" content="@seuTwitter">
+
+<!-- Cor do navegador / mobile -->
+<meta name="theme-color" content="#000000">
+
+  
 </head>
 
 <body class="relative">
