--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.google.com/specimen/Cabin">
 
 <!-- Charset -->
 <meta charset="UTF-8">
@@ -101,16 +102,20 @@
   </section>
   <br><br><br>
   <section class="">
-    <h1 class="text-center text-7xl font-bold">Você tem a ideia, <br> <span>a gente faz</span></h1>
+    <h1 class="text-center text-7xl font-bold sm:font-bold md:font-bold">Você tem a ideia, <br> <span>a gente faz</span></h1>
+    <div>
     <br><br>
-    <p class="px-20 text-2xl font-medium mx-8 text-center ">Somos a Kalwer, uma marca dedicada a transformar ideias em
+   
+    <p class="px-4 text-2xl  mx-8 text-center "style="font-family: 'Cabin', sans-serif; font-weight: 400;">Somos a Kalwer, uma marca dedicada a transformar ideias em
       identidades visuais que realmente fazem a diferença. Com paixão pelo design e foco em comunicação estratégica, a
       Kalwer surgiu para ajudar empresas, criadores e empreendedores a se destacarem no digital. Mais do que criar arte
       bonita, a Kalwer acredita que design é sobre impacto, conexão e confiança.</p>
+     
     <br><br>
 <div class="flex flex-wrap items-center justify-center gap-10 px-12 py-10">
   <!-- Texto à esquerda agora -->
   <div class="flex flex-col items-center justify-center text-center my-auto">
+
     <p class="text-2xl font-medium">
       Produzimos banners para YouTube, posts para <br>
       redes sociais, vídeos curtos para reels, stories <br>
