--- a/index.html
+++ b/index.html
@@ -119,11 +119,7 @@
   <div class="flex flex-col items-center justify-center text-center my-auto">
 
     <p data-aos="fade-up" data-aos-duration="800" class="text-2xl font-medium">
-      Produzimos banners para YouTube, posts para <br>
-      redes sociais, vídeos curtos para reels, stories <br>
-      e TikTok, além de desenhos e emotes <br>
-      personalizados. Entregamos conteúdos criativos <br>
-      e impactantes para fortalecer sua marca no digital.
+      Criamos overlays personalizados para Twitch <br> que destacam a identidade de cada <br>streamer. Com um visual profissional <br> e feito sob medida, ajudamos <br>a tornar a live mais atrativa e memorável para o público.
     </p>
 
     <a data-aos="zoom-in" data-aos-duration="800" href="#portfolio" class="mt-4 bg-white border border-black px-6 py-2 rounded hover:bg-gray-200 transition">
@@ -132,7 +128,10 @@
   </div>
 
   <!-- Imagem à direita agora -->
-  <img data-aos="zoom-in" data-aos-duration="800" src="./mgb-04..png" alt="Exemplo" class="w-96 h-auto rounded-xl px-2 shadow hover:scale-110 transition-transform duration-300" />
+<video data-aos="fade-up" data-aos-duration="800" controls class="w-96 h-auto rounded-xl px-2 shadow hover:scale-110 transition-transform duration-300 shadow-lg">
+  <source src="./Comp_1_4.mp4" type="video/mp4">
+  Seu navegador não suporta vídeos HTML5.
+</video>
 </div>
 
 
@@ -235,12 +234,16 @@
   <section id="contato" class="py-16 px-6 bg-white text-center">
     <h2 data-aos="fade-up" data-aos-duration="800" class="text-5xl font-bold text-pink-700 mb-4">Fale com a gente</h2>
     <p data-aos="fade-up" data-aos-duration="800" class="text-gray-700 text-xl mb-6">Quer transformar sua ideia em algo visual? Manda uma mensagem e vamos criar juntos.</p>
-    <a data-aos="zoom-in" data-aos-duration="800" href="https://wa.me/5511988784102?text=Olá,%20quero%20um%20design%20personalizado!" target="_blank" class="bg-pink-600 hover:bg-pink-700 text-white px-6 py-3 rounded transition">Entrar em contato</a>
+    <a data-aos="zoom-in" data-aos-duration="800" href="https://wa.me/5511988784102?text=Olá,%20quero%20um%20design%20personalizado!" target="_blank" class="bg-green-600 hover:bg-green-700 text-white px-6 py-3 rounded-3xl transition">falar no whatsapp</a>
+    <br>
+    <br>
+     <a data-aos="zoom-in" data-aos-duration="800" href="https://discord.gg/BUzjXygrhW" target="_blank" class="bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-3xl transition">falar no discord</a>
   </section>
 
   <!-- Footer -->
   <footer class="bg-black text-white py-6 text-center">
     <p>&copy; 2025 Kalwer. Todos os direitos reservados.</p>
+    <a href="">Instagram</a>
   </footer>
   
 <script>
